Updated completed work from Week 1

--- a/Labs/module-1_labs/01_python/03_lab-string-operations/your-code/challenge-1.ipynb
+++ b/Labs/module-1_labs/01_python/03_lab-string-operations/your-code/challenge-1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +33,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Durante un tiempo no estuvo segura de si su marido era su marido.\n"
+     ]
+    }
+   ],
    "source": [
     "str_list = ['Durante', 'un', 'tiempo', 'no', 'estuvo', 'segura', 'de', 'si', 'su', 'marido', 'era', 'su', 'marido']\n",
-    "# Your code here:\n"
+    "new_string = \" \".join(str_list) + \".\"\n",
+    "print(new_string)"
    ]
   },
   {
@@ -50,12 +61,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grocery list: bananas, bread, brownie mix, broccoli.\n"
+     ]
+    }
+   ],
    "source": [
     "food_list = ['Bananas', 'Chocolate', 'bread', 'diapers', 'Ice Cream', 'Brownie Mix', 'broccoli']\n",
-    "# Your code here:\n"
+    "lower_list = [x.lower() for x in food_list]\n",
+    "b_list = []\n",
+    "for x in lower_list:\n",
+    "    if x.startswith(\"b\"):\n",
+    "        b_list.append(x)\n",
+    "grocery_string = \"Grocery list: \" + \", \".join(b_list) + \".\"\n",
+    "print(grocery_string)"
    ]
   },
   {
@@ -69,9 +94,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The area of the circle with radius: 4.5 is: 63.61725123519331.\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
@@ -80,17 +115,10 @@
     "radius = 4.5\n",
     "\n",
     "def area(x, pi = math.pi):\n",
-    "    # This function takes a radius and returns the area of a circle. We also pass a default value for pi.\n",
-    "    # Input: Float (and default value for pi)\n",
-    "    # Output: Float\n",
-    "    \n",
-    "    # Sample input: 5.0\n",
-    "    # Sample Output: 78.53981633\n",
-    "    \n",
-    "    # Your code here:\n",
-    "    \n",
-    "    \n",
-    "# Your output string here:"
+    "    area = pi*(x**2)\n",
+    "    return area\n",
+    "circle_area = area(4.5)    \n",
+    "print(f\"{string1} {radius} {string2} {circle_area}.\")"
    ]
   },
   {
@@ -106,9 +134,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'some': 2, 'say': 3, 'the': 1, 'world': 1, 'will': 1, 'end': 1, 'in': 2, 'fire': 2, 'ice': 2, 'from': 1, 'what': 1, 'i’ve': 1, 'tasted': 1, 'of': 2, 'desire': 1, 'i': 3, 'hold': 1, 'with': 1, 'those': 1, 'who': 1, 'favor': 1, 'but': 1, 'if': 1, 'it': 1, 'had': 1, 'to': 2, 'perish': 1, 'twice': 1, 'think': 1, 'know': 1, 'enough': 1, 'hate': 1, 'that': 1, 'for': 1, 'destruction': 1, 'is': 1, 'also': 1, 'great': 1, 'and': 1, 'would': 1, 'suffice': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "poem = \"\"\"Some say the world will end in fire,\n",
+    "Some say in ice.\n",
+    "From what I’ve tasted of desire\n",
+    "I hold with those who favor fire.\n",
+    "But if it had to perish twice,\n",
+    "I think I know enough of hate\n",
+    "To say that for destruction ice\n",
+    "Is also great\n",
+    "And would suffice.\"\"\"\n",
+    "#make everything same case\n",
+    "#strip punctuation \n",
+    "#split the string\n",
+    "#count the frequence of each word\n",
+    "#make a dictionary \n",
+    "#remove empty strings\n",
+    "lower_poem = poem.lower()\n",
+    "# print(lower_poem)\n",
+    "strip_poem = lower_poem.replace(\",\", \"\").replace(\".\", \"\").replace(\"\\n\", \" \")\n",
+    "# print(strip_poem)\n",
+    "split_list = strip_poem.split(\" \")\n",
+    "# print(split_list)\n",
+    "final_count = {}\n",
+    "for x in split_list:\n",
+    "    final_count[x] = split_list.count(x)\n",
+    "print(final_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'some': 2, 'say': 3, 'the': 1, 'world': 1, 'will': 1, 'end': 1, 'in': 2, 'fire': 2, 'ice': 2, 'from': 1, 'what': 1, 'i’ve': 1, 'tasted': 1, 'of': 2, 'desire': 1, 'i': 3, 'hold': 1, 'with': 1, 'those': 1, 'who': 1, 'favor': 1, 'but': 1, 'if': 1, 'it': 1, 'had': 1, 'to': 2, 'perish': 1, 'twice': 1, 'think': 1, 'know': 1, 'enough': 1, 'hate': 1, 'that': 1, 'for': 1, 'destruction': 1, 'is': 1, 'also': 1, 'great': 1, 'and': 1, 'would': 1, 'suffice': 1}\n"
+     ]
+    }
+   ],
    "source": [
     "poem = \"\"\"Some say the world will end in fire,\n",
     "Some say in ice.\n",
@@ -120,7 +197,12 @@
     "Is also great\n",
     "And would suffice.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "no_punctuation_split = poem.replace(\".\", \"\").replace(\",\", \"\").replace(\"\\n\", \" \").split(\" \")\n",
+    "lower_list = [x.lower() for x in no_punctuation_split]\n",
+    "count_dictionary = {}\n",
+    "for x in lower_list:\n",
+    "    count_dictionary[x] = lower_list.count(x)\n",
+    "print(count_dictionary)"
    ]
   },
   {
@@ -132,13 +214,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'soft', 'when', 'day', 'both', 'fears', 'with', 'apple', 'waterd', 'morning', 'mine', 'into', 'angry', 'foe', 'stole', 'till', 'grew', 'beheld', 'i', 'was', 'wrath', 'tears', 'deceitful', 'sunned', 'shine', 'garden', 'night', 'did', 'smiles', 'see', 'beneath', 'told', 'tree', 'my', 'end', 'wiles', 'not', 'that', 'bright', 'he', 'veild', 'pole', 'outstretched', 'knew', 'glad', 'grow', 'bore', 'had', 'friend'}\n",
+      "['and', 'as', 'an', 'a', 'the', 'in', 'it']\n"
+     ]
+    }
+   ],
    "source": [
     "blacklist = ['and', 'as', 'an', 'a', 'the', 'in', 'it']\n",
     "\n",
-    "poem = \"\"\"I was angry with my friend; \n",
+    "poem2 = \"\"\"I was angry with my friend; \n",
     "I told my wrath, my wrath did end.\n",
     "I was angry with my foe: \n",
     "I told it not, my wrath did grow. \n",
@@ -158,7 +249,58 @@
     "In the morning glad I see; \n",
     "My foe outstretched beneath the tree.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "#lowercase all words\n",
+    "#split the string into a list\n",
+    "#get rid of punctuation (line breaks, empty strings)\n",
+    "#compare blacklist to our new list\n",
+    "#remove words that appear in blacklist from our new list\n",
+    "lower_poem2 = poem2.lower()\n",
+    "# print(lower_poem2)\n",
+    "strip_poem2 = lower_poem2.replace(\",\", \"\").replace(\".\", \"\").replace(\"\\n\", \" \").replace(\"&\", \"and\").replace(\":\", \"\").replace(\";\",\"\")\n",
+    "# print(strip_poem2)\n",
+    "split_list2 = strip_poem2.split(\" \")\n",
+    "# for word in split_list2:\n",
+    "#     if word == '':\n",
+    "#         split_list2.remove(word)\n",
+    "remove_empty = list(filter(None, split_list2))\n",
+    "comparison_list = list(remove_empty)\n",
+    "blacklist_set = blacklist+['']\n",
+    "# for word in blacklist:\n",
+    "#     if word in remove_empty:\n",
+    "#         remove_empty.remove(word)\n",
+    "#     else:\n",
+    "#         continue\n",
+    "for word in remove_empty:\n",
+    "    if word in blacklist:\n",
+    "        remove_empty.remove(word)\n",
+    "# final_list = remove_empty - blacklist_set\n",
+    "print(final_list)\n",
+    "print(blacklist)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['some', 'say', 'world', 'will', 'end', 'fire', 'some', 'say', 'ice', 'from', 'what', 'i’ve', 'tasted', 'of', 'desire', 'i', 'hold', 'with', 'those', 'who', 'favor', 'fire', 'but', 'if', 'had', 'to', 'perish', 'twice', 'i', 'think', 'i', 'know', 'enough', 'of', 'hate', 'to', 'say', 'that', 'for', 'destruction', 'ice', 'is', 'also', 'great', 'would', 'suffice']\n"
+     ]
+    }
+   ],
+   "source": [
+    "no_punctuation_split2 = poem.replace(\".\", \"\").replace(\",\", \"\").replace(\"\\n\", \" \").split(\" \")\n",
+    "lower_list2 = [x.lower() for x in no_punctuation_split2]\n",
+    "count_dictionary2 = {}\n",
+    "for x in lower_list2:\n",
+    "    if x in blacklist:\n",
+    "        lower_list2.remove(x)\n",
+    "\n",
+    "\n",
+    "print(lower_list2)"
    ]
   },
   {
@@ -172,14 +314,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['T', 'P']\n"
+     ]
+    }
+   ],
    "source": [
     "poem = \"\"\"The apparition of these faces in the crowd;\n",
     "Petals on a wet, black bough.\"\"\"\n",
+    "#return all uppercase characters\n",
     "\n",
-    "# Your code here:\n"
+    "regex_pattern = \"[A-Z]\"\n",
+    "uppercase = re.findall(regex_pattern, poem)\n",
+    "print(uppercase)"
    ]
   },
   {
@@ -191,13 +344,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123abc\n",
+      "abc123\n",
+      "JohnSmith1\n",
+      "ABBY4\n",
+      "did not find\n"
+     ]
+    }
+   ],
    "source": [
     "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
-    "\n",
-    "# Your code here:\n"
+    "#want all elements containing a number\n",
+    "for x in data:\n",
+    "    match = re.search(r\"\\d\", x)\n",
+    "    if match:\n",
+    "        print(x)\n",
+    "    else:\n",
+    "        print('did not find')\n"
    ]
   },
   {
@@ -213,13 +383,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123abc\n",
+      "abc123\n",
+      "JohnSmith1\n",
+      "did not find\n",
+      "did not find\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
+    "for x in data:\n",
+    "    match_lower = re.search(r\"[a-z]\", x)\n",
+    "    match_digit = re.search(r\"\\d\", x)\n",
+    "    if match_lower and match_digit:\n",
+    "        print(x)\n",
+    "    else:\n",
+    "        print('did not find')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
-    "# Your code here:\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -238,7 +433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
