--- a/Labs/module-1_labs/01_python/03_lab-string-operations/your-code/challenge-2.ipynb
+++ b/Labs/module-1_labs/01_python/03_lab-string-operations/your-code/challenge-2.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,13 +88,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "corpus = []\n",
-    "\n",
-    "# Write your code here\n"
+    "for document in docs:\n",
+    "    with open(document, \"r\") as f:\n",
+    "        lines = f.readlines()[0]\n",
+    "        corpus.append(lines)"
    ]
   },
   {
@@ -106,9 +108,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['Ironhack is cool.'], ['I love Ironhack.'], ['I am a student at Ironhack.']]\n"
+     ]
+    }
+   ],
    "source": [
     "print(corpus)"
    ]
@@ -136,11 +146,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ironhack is cool', 'i love ironhack', 'i am a student at ironhack']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code here"
+    "corpus_clean = []\n",
+    "for doc in corpus:\n",
+    "    corpus_clean.append(doc.lower().replace(\".\", \"\"))\n",
+    "print(corpus_clean)"
    ]
   },
   {
@@ -152,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,11 +193,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ironhack', 'is', 'cool', 'i', 'love', 'am', 'a', 'student', 'at']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code here"
+    "#split the string\n",
+    "#nested for-loop?\n",
+    "#find unique items, add to bag_of_words\n",
+    "\n",
+    "for sentence in corpus_clean:\n",
+    "    words = sentence.split(\" \")\n",
+    "#     print(words)\n",
+    "    for w in words:\n",
+    "        if w not in bag_of_words:\n",
+    "            bag_of_words.append(w)\n",
+    "\n",
+    "print(bag_of_words)        "
    ]
   },
   {
@@ -192,9 +232,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ironhack', 'is', 'cool', 'i', 'love', 'am', 'a', 'student', 'at']\n"
+     ]
+    }
+   ],
    "source": [
     "print(bag_of_words)"
    ]
@@ -208,13 +256,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 1, 1, 0, 0, 0, 0, 0, 0], [1, 0, 0, 1, 1, 0, 0, 0, 0], [1, 0, 0, 1, 0, 1, 1, 1, 1]]\n"
+     ]
+    }
+   ],
    "source": [
     "term_freq = []\n",
     "\n",
-    "# Write your code here"
+    "#compare corpus_clean to bag_of_words\n",
+    "#count each time term is in each string of corpus_clean\n",
+    "#append count to term_freq\n",
+    "#nested for-loops?\n",
+    "for sentence in corpus_clean:\n",
+    "    storing_list = []\n",
+    "    terms = sentence.split()\n",
+    "    for word in bag_of_words:\n",
+    "        if word in terms:\n",
+    "            storing_list.append(1)\n",
+    "        else:\n",
+    "            storing_list.append(0)\n",
+    "    term_freq.append(storing_list)\n",
+    "print(term_freq)\n",
+    "\n",
+    "#         if term in sentence:\n",
+    "#             storing_list.append(1)\n",
+    "#             print(storing_list)\n",
+    "#             print(\"_____________\")\n",
+    "\n",
+    "#         else:\n",
+    "#             storing_list.append(0)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# for term in bag_of_words:\n",
+    "#     print(term)\n",
+    "#     for sentence in corpus_clean:\n",
+    "#         print(sentence)\n",
+    "#         storing_list = []\n",
+    "#         if term in sentence:\n",
+    "#             storing_list.append(1)\n",
+    "#         else:\n",
+    "#             storing_list.append(0)\n",
+    "#         term_freq.append(storing_list)\n",
+    "# print(term_freq)\n",
+    "        "
    ]
   },
   {
@@ -228,9 +322,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 1, 1, 0, 0, 0, 0, 0, 0], [1, 0, 0, 1, 1, 0, 0, 0, 0], [1, 0, 0, 1, 0, 1, 1, 1, 1]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(term_freq)"
    ]
@@ -278,13 +380,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ironhack', 'cool', 'love', 'student']\n",
+      "[[1, 1, 0, 0], [1, 0, 1, 0], [1, 0, 0, 1]]\n"
+     ]
+    }
+   ],
    "source": [
     "stop_words = ['all', 'six', 'less', 'being', 'indeed', 'over', 'move', 'anyway', 'fifty', 'four', 'not', 'own', 'through', 'yourselves', 'go', 'where', 'mill', 'only', 'find', 'before', 'one', 'whose', 'system', 'how', 'somewhere', 'with', 'thick', 'show', 'had', 'enough', 'should', 'to', 'must', 'whom', 'seeming', 'under', 'ours', 'has', 'might', 'thereafter', 'latterly', 'do', 'them', 'his', 'around', 'than', 'get', 'very', 'de', 'none', 'cannot', 'every', 'whether', 'they', 'front', 'during', 'thus', 'now', 'him', 'nor', 'name', 'several', 'hereafter', 'always', 'who', 'cry', 'whither', 'this', 'someone', 'either', 'each', 'become', 'thereupon', 'sometime', 'side', 'two', 'therein', 'twelve', 'because', 'often', 'ten', 'our', 'eg', 'some', 'back', 'up', 'namely', 'towards', 'are', 'further', 'beyond', 'ourselves', 'yet', 'out', 'even', 'will', 'what', 'still', 'for', 'bottom', 'mine', 'since', 'please', 'forty', 'per', 'its', 'everything', 'behind', 'un', 'above', 'between', 'it', 'neither', 'seemed', 'ever', 'across', 'she', 'somehow', 'be', 'we', 'full', 'never', 'sixty', 'however', 'here', 'otherwise', 'were', 'whereupon', 'nowhere', 'although', 'found', 'alone', 're', 'along', 'fifteen', 'by', 'both', 'about', 'last', 'would', 'anything', 'via', 'many', 'could', 'thence', 'put', 'against', 'keep', 'etc', 'amount', 'became', 'ltd', 'hence', 'onto', 'or', 'con', 'among', 'already', 'co', 'afterwards', 'formerly', 'within', 'seems', 'into', 'others', 'while', 'whatever', 'except', 'down', 'hers', 'everyone', 'done', 'least', 'another', 'whoever', 'moreover', 'couldnt', 'throughout', 'anyhow', 'yourself', 'three', 'from', 'her', 'few', 'together', 'top', 'there', 'due', 'been', 'next', 'anyone', 'eleven', 'much', 'call', 'therefore', 'interest', 'then', 'thru', 'themselves', 'hundred', 'was', 'sincere', 'empty', 'more', 'himself', 'elsewhere', 'mostly', 'on', 'fire', 'am', 'becoming', 'hereby', 'amongst', 'else', 'part', 'everywhere', 'too', 'herself', 'former', 'those', 'he', 'me', 'myself', 'made', 'twenty', 'these', 'bill', 'cant', 'us', 'until', 'besides', 'nevertheless', 'below', 'anywhere', 'nine', 'can', 'of', 'your', 'toward', 'my', 'something', 'and', 'whereafter', 'whenever', 'give', 'almost', 'wherever', 'is', 'describe', 'beforehand', 'herein', 'an', 'as', 'itself', 'at', 'have', 'in', 'seem', 'whence', 'ie', 'any', 'fill', 'again', 'hasnt', 'inc', 'thereby', 'thin', 'no', 'perhaps', 'latter', 'meanwhile', 'when', 'detail', 'same', 'wherein', 'beside', 'also', 'that', 'other', 'take', 'which', 'becomes', 'you', 'if', 'nobody', 'see', 'though', 'may', 'after', 'upon', 'most', 'hereupon', 'eight', 'but', 'serious', 'nothing', 'such', 'why', 'a', 'off', 'whereby', 'third', 'i', 'whole', 'noone', 'sometimes', 'well', 'amoungst', 'yours', 'their', 'rather', 'without', 'so', 'five', 'the', 'first', 'whereas', 'once']\n",
+    "corpus = []\n",
+    "bag_of_words = []\n",
+    "term_freq = []\n",
+    "corpus_clean = []\n",
+    "#importing/reading the corpus    \n",
+    "for document in docs:\n",
+    "    with open(document, \"r\") as f:\n",
+    "        lines = f.readlines()[0]\n",
+    "        corpus.append(lines)\n",
+    "        \n",
+    "#cleaning the corpus    \n",
+    "for doc in corpus:\n",
+    "    corpus_clean.append(doc.lower().replace(\".\", \"\"))\n",
+    "    \n",
+    "#creating bag_of_words    \n",
+    "for sentence in corpus_clean:\n",
+    "    words = sentence.split(\" \")\n",
+    "    for w in words:\n",
+    "        if w in stop_words:\n",
+    "            continue\n",
+    "        if w not in bag_of_words:\n",
+    "            bag_of_words.append(w)\n",
+    "print(bag_of_words)\n",
     "\n",
-    "# Write your code below\n"
+    "#for-loop option to check bag_of_words against stop_words, we used if in stop_words in step above instead\n",
+    "# sorted_words = []\n",
+    "# for word in bag_of_words:\n",
+    "#     if word in stop_words:\n",
+    "#         print(word)\n",
+    "#         continue\n",
+    "#     else:\n",
+    "#         sorted_words.append(word)\n",
+    "# print(sorted_words)\n",
+    "\n",
+    "#comparing sentence to bag_of_words to get term frequence\n",
+    "for sentence in corpus_clean:\n",
+    "    storing_list = []\n",
+    "    terms = sentence.split()\n",
+    "    for word in bag_of_words:\n",
+    "        if word in terms:\n",
+    "            storing_list.append(1)\n",
+    "        else:\n",
+    "            storing_list.append(0)\n",
+    "    term_freq.append(storing_list)\n",
+    "print(term_freq)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -315,6 +471,13 @@
     " [1 1 0 1 0 0 1]]\n",
     " ```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -333,7 +496,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
