--- a/Labs/module-1_labs/01_python/02_lab-tuple-set-dict/your-code/challenge-1.ipynb
+++ b/Labs/module-1_labs/01_python/02_lab-tuple-set-dict/your-code/challenge-1.ipynb
@@ -15,11 +15,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "tup = (\"I\",)"
    ]
   },
   {
@@ -33,11 +33,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "print(type(tup))"
    ]
   },
   {
@@ -55,13 +63,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n",
+    "#tup.append(\"r\")\n",
+    "#way around sort of, still assigning a new value\n",
+    "tup = tup + (\"r\",) + (\"o\",) + (\"n\",) + (\"h\",) + (\"a\",) + (\"c\",) + (\"k\",)\n",
     "\n",
-    "# Your explanation here\n"
+    "# tuples are immutible, so you don't have the flexiblity of using .append()"
    ]
   },
   {
@@ -79,13 +89,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n",
-    "\n",
-    "# Your explanation here\n"
+    "tup = (\"I\", \"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\")\n",
+    "# we are able to reassign the value of tup because we are essentially making a new tuple"
    ]
   },
   {
@@ -103,11 +112,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n') ('h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "tup1 = tup[:4]\n",
+    "tup2 = tup[4:]\n",
+    "print(tup1, tup2)"
    ]
   },
   {
@@ -121,11 +140,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "tup3 = tup1 + tup2\n",
+    "print(tup3)"
    ]
   },
   {
@@ -137,11 +165,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "len(tup1) + len(tup2) == len(tup3)"
    ]
   },
   {
@@ -153,11 +192,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "print(tup3.index(\"h\"))"
    ]
   },
   {
@@ -177,11 +224,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "false\n",
+      "True\n",
+      "false\n",
+      "false\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "letters = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
+    "\n",
+    "for x in letters:\n",
+    "    if x in tup3:\n",
+    "        print(\"True\")\n",
+    "    else:\n",
+    "        print(\"False\")"
    ]
   },
   {
@@ -195,11 +260,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a 1\n",
+      "b 0\n",
+      "c 1\n",
+      "d 0\n",
+      "e 0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "count = 0\n",
+    "# for x in letters:\n",
+    "#     count = 0\n",
+    "#     for y in tup3:\n",
+    "#         if x == y:\n",
+    "#             count += 1\n",
+    "#             print(x, count)\n",
+    "#         else: \n",
+    "#             continue\n",
+    "            \n",
+    "#     count = 0\n",
+    "for x in letters:\n",
+    "    count = 0\n",
+    "    if x in tup3:\n",
+    "        count += 1\n",
+    "        print(x, count)\n",
+    "    else:\n",
+    "        print(x, count)"
    ]
   }
  ],
@@ -219,7 +313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
