--- a/Labs/module-1_labs/01_python/02_lab-tuple-set-dict/your-code/challenge-2.ipynb
+++ b/Labs/module-1_labs/01_python/02_lab-tuple-set-dict/your-code/challenge-2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,11 +38,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[28, 77, 94, 64, 72, 97, 9, 42, 32, 98, 68, 1, 22, 55, 59, 92, 53, 43, 52, 12, 96, 88, 50, 24, 90, 85, 93, 5, 18, 80, 82, 69, 49, 39, 44, 41, 19, 99, 89, 78, 57, 56, 79, 14, 0, 30, 58, 62, 60, 38, 70, 10, 61, 76, 73, 91, 66, 47, 13, 83, 7, 21, 37, 36, 74, 31, 35, 16, 11, 75, 46, 65, 40, 63, 26, 2, 6, 4, 25, 95]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "sample_list_1 = random.sample(range(100), k=80)\n",
+    "print(sample_list_1)"
    ]
   },
   {
@@ -54,11 +63,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "set1 = set(sample_list_1)\n",
+    "print(len(set1))"
    ]
   },
   {
@@ -77,11 +95,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "sample_list_2 = []\n",
+    "while len(sample_list_2) != 80:\n",
+    "    random_int = (random.sample(range(100), k=1))\n",
+    "    sample_list_2.append(random_int[0])"
    ]
   },
   {
@@ -93,11 +114,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "set2 = set(sample_list_2)\n",
+    "print(len(set2))"
    ]
   },
   {
@@ -109,11 +139,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{6, 7, 10, 11, 14, 18, 19, 22, 24, 30, 31, 37, 38, 44, 47, 50, 56, 57, 58, 59, 60, 63, 64, 65, 66, 68, 70, 73, 76, 79, 80, 82, 88, 91, 98}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "set3 = set()\n",
+    "for x in set1:\n",
+    "    if x not in set2:\n",
+    "        set3.add(x)\n",
+    "    else:\n",
+    "        continue\n",
+    "print(set3)"
    ]
   },
   {
@@ -125,11 +169,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{3, 8, 45, 15, 48, 51, 20, 23, 27, 29}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "set4 = set()\n",
+    "for x in set2:\n",
+    "    if x not in set1:\n",
+    "        set4.add(x)\n",
+    "    else:\n",
+    "        continue\n",
+    "print(set4)"
    ]
   },
   {
@@ -141,11 +199,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 4, 5, 9, 12, 13, 16, 21, 25, 26, 28, 32, 35, 36, 39, 40, 41, 42, 43, 46, 49, 52, 53, 55, 61, 62, 69, 72, 74, 75, 77, 78, 83, 85, 89, 90, 92, 93, 94, 95, 96, 97, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "set5 = set()\n",
+    "for x in set2:\n",
+    "    if x in set1:\n",
+    "        set5.add(x)\n",
+    "    else:\n",
+    "        continue\n",
+    "print(set5)"
    ]
   },
   {
@@ -165,11 +237,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n",
+      "55\n",
+      "35\n",
+      "10\n",
+      "45\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "print(len(set1)) #random unique list\n",
+    "print(len(set2)) #random non-unique list\n",
+    "print(len(set3)) #set 1 intersect set 2?\n",
+    "print(len(set4)) #set 2 intersect set 1?\n",
+    "print(len(set5)) #set 1 union set 2"
    ]
   },
   {
@@ -181,11 +269,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "set6 = set()"
    ]
   },
   {
@@ -197,11 +285,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{67, 4, 71, 8, 9, 72, 11, 12, 13, 73, 15, 16, 74, 18, 19, 75, 82, 24, 88, 97, 36, 39, 41, 43, 47, 54, 55, 57, 59, 61, 63}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "set6.update(set3, set5)\n",
+    "print(set6)"
    ]
   },
   {
@@ -213,11 +310,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "len(set1) == len(set6)"
    ]
   },
   {
@@ -229,11 +337,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "print(set1.issubset(set2))\n",
+    "print(set1.issubset(set3))"
    ]
   },
   {
@@ -247,11 +365,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "len(set3.union(set4, set5)) == len(set1.union(set2))"
    ]
   },
   {
@@ -263,11 +392,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "set1.pop()"
    ]
   },
   {
@@ -283,11 +423,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "64\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in list_to_remove:\n",
+    "    if x in set1:\n",
+    "        set1.remove(x)\n",
+    "    else:\n",
+    "        continue\n",
+    "print(set1)"
    ]
   }
  ],
@@ -307,7 +469,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
