--- a/Labs/module-1_labs/01_python/04_lab-functional-programming/your-code/Q3.ipynb
+++ b/Labs/module-1_labs/01_python/04_lab-functional-programming/your-code/Q3.ipynb
@@ -85,13 +85,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, -100, 0]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "numbers = [1, 4, -1, -100, 0, 5, -99]\n",
     "\n",
-    "# Enter your code below"
+    "list(filter(lambda x: x%2 == 0, numbers))\n",
+    " "
    ]
   },
   {
@@ -113,15 +125,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'good morning everyone'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import langdetect\n",
     "from functools import reduce\n",
     "words = ['good morning', '早上好', 'доброго', 'おはようございます', 'everyone', '大家', 'каждый', 'みんな']\n",
+    "\" \".join((list(filter((lambda x: langdetect.detect(x) == 'en'), words))))\n",
     "\n",
-    "# Enter your code below"
+    "# reduce((lambda x, y = 'en' : langdetect.detect(x)== y), words)"
    ]
   },
   {
@@ -199,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
