--- a/Labs/module-1_labs/01_python/06_lab-lambda-functions/your-code/main.ipynb
+++ b/Labs/module-1_labs/01_python/06_lab-lambda-functions/your-code/main.ipynb
@@ -21,16 +21,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "def modify_list(lst, lmbda):\n",
-    "    \"\"\"\n",
-    "    Input: list and lambda expression\n",
-    "    \n",
-    "    Output: the transformed list\n",
-    "    \"\"\"\n",
+    "    return [lmbda(x) for x in lst]\n",
     "    \n",
     "    #your code here:\n",
     "    \n"
@@ -47,12 +43,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "l_func = lambda x: x+273.15\n"
    ]
   },
   {
@@ -64,12 +59,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[285.15, 296.15, 311.15, 218.14999999999998, 297.15]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "temps = [12, 23, 38, -55, 24]\n",
-    "\n",
+    "modify_list(temps, l_func)\n",
     "# Your code here:"
    ]
   },
@@ -84,11 +90,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "mod = lambda x,y: 1 if x%y == 0 or y%x == 0 else 0\n"
    ]
   },
   {
@@ -102,15 +108,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def divisor(b):\n",
-    "    \"\"\"\n",
-    "    input: a number\n",
-    "    output: a function that returns 1 if the number is divisible by another number (to be passed later) and zero otherwise\n",
-    "    \"\"\"\n",
+    "def divisor(y):\n",
+    "    return lambda x: 1 if x%y == 0 else 0\n",
     "    \n",
     "    # Your code here:"
    ]
@@ -124,11 +127,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "divisible5 = divisor(5)"
    ]
   },
   {
@@ -140,18 +143,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "divisible5(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "divisible5(8)"
    ]
@@ -200,14 +225,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Green', 'eggs'), ('cheese', 'cheese'), ('English', 'cucumber'), ('tomato', 'tomato')]\n"
+     ]
+    }
+   ],
    "source": [
     "list1 = ['Green', 'cheese', 'English', 'tomato']\n",
     "list2 = ['eggs', 'cheese', 'cucumber', 'tomato']\n",
     "\n",
-    "#Your code here:\n"
+    "zip_it = lambda x,y: zip(x,y)\n",
+    "\n",
+    "zipped_list = list(zip_it(list1, list2))\n",
+    "\n",
+    "print(zipped_list)"
    ]
   },
   {
@@ -223,14 +260,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Political Science', 'Essay'), ('Computer Science', 'Homework'), ('Engineering', 'Lab'), ('Mathematics', 'Module')]\n"
+     ]
+    }
+   ],
    "source": [
     "list1 = ['Engineering', 'Computer Science', 'Political Science', 'Mathematics']\n",
     "list2 = ['Lab', 'Homework', 'Essay', 'Module']\n",
     "\n",
-    "# Your code here:\n"
+    "zipped = (lambda x,y: zip(x,y))\n",
+    "zlist = zipped(list1, list2)\n",
+    "final = sorted(zlist, key=lambda x: x[1])\n",
+    "print(list(final))"
    ]
   },
   {
@@ -244,13 +292,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Audi': 2001, 'BMW': 2005, 'Honda': 1997, 'Toyota': 1995}"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "d = {'Honda': 1997, 'Toyota': 1995, 'Audi': 2001, 'BMW': 2005}\n",
     "\n",
-    "# Your code here:"
+    "sorted(d, key = lambda x: x[0]) \n",
+    "{k: v for k, v in sorted(d.items(), key=lambda item: item[0])}\n"
    ]
   },
   {
@@ -277,7 +337,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
