--- a/Labs/module-1_labs/01_python/10_lab-object-oriented-programming/your-code/main.ipynb
+++ b/Labs/module-1_labs/01_python/10_lab-object-oriented-programming/your-code/main.ipynb
@@ -23,34 +23,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "def twodim(mat):\n",
-    "    # This function takes a list of lists and checks that it is of depth 2. \n",
-    "    # If the depth is not 2, either return false or return informative errors that let the user know the depth of the list.\n",
-    "    # Input: nested list\n",
-    "    # Output: Boolean (or error)\n",
-    "    # Sample Input: [[1,2,3], [4,5,6]]\n",
-    "    # Sample Output: True\n",
-    "    \n",
-    "    # Your Code Here:\n",
+    "    mat_len = len(mat) \n",
+    "    for i, x in enumerate(mat):\n",
+    "        if len(x) == mat_len:\n",
+    "            continue\n",
+    "        else:\n",
+    "            print(f\"The number of rows is {mat_len} and the length of the number {1+i} list is {len(x)}\")\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of rows is 3 and the length of the number 1 list is 2\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,12 +82,80 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "calling function recursive_butts(1)\n",
+      "  cannot return yet.. need to wait for recursive_butts(2)\n",
+      "calling function recursive_butts(2)\n",
+      "  cannot return yet.. need to wait for recursive_butts(3)\n",
+      "calling function recursive_butts(3)\n",
+      "  cannot return yet.. need to wait for recursive_butts(4)\n",
+      "calling function recursive_butts(4)\n",
+      "  cannot return yet.. need to wait for recursive_butts(5)\n",
+      "calling function recursive_butts(5)\n",
+      "    finally met stop condition! returning 6\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# recursion\n",
+    "\n",
+    "def recursive_butts(num):\n",
+    "    print(f\"calling function recursive_butts({num})\")\n",
+    "    output = num + 1\n",
+    "    if output == 6:\n",
+    "        print(f\"    finally met stop condition! returning {output}\")\n",
+    "        return output\n",
+    "    else:\n",
+    "        print(f\"  cannot return yet.. need to wait for recursive_butts({output})\")\n",
+    "        return recursive_butts(output)\n",
+    "\n",
+    "recursive_butts(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "calling function recursive_butts(1)\n",
+    "    cannot return yet.. need to wait for recursive_butts(2)\n",
+    "    calling function recursive_butts(2)\n",
+    "        cannot return yet.. need to wait for recursive_butts(3)\n",
+    "        calling function recursive_butts(3)\n",
+    "            cannot return yet.. need to wait for recursive_butts(4)\n",
+    "            calling function recursive_butts(4)\n",
+    "                cannot return yet.. need to wait for recursive_butts(5)\n",
+    "                calling function recursive_butts(5)\n",
+    "                    finally met stop condition! returning 6\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def twodimrecursive(mat):\n",
-    "    # Your code here:\n",
+    "    \n",
     "    "
    ]
   },
@@ -401,7 +477,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
